gcc/testsuite/rust/rustc/ui/parser/issue-70549-resolve-after-recovered-self-ctor.rs
struct S {}

impl S {
    fn foo(&mur Self) {}
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
// { dg-error "" "" { target *-*-* } .-3 }
    fn bar(&'static mur Self) {}
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
// { dg-error "" "" { target *-*-* } .-3 }
// { dg-error "" "" { target *-*-* } .-4 }

    fn baz(&mur Self @ _) {}
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

